# DDG_Tutorial_Fast

./: .gitignore  CMakeLists.txt  README.md  run.sh  simDER
datafiles/: simDER.txt
inputdata/2d_curve/: option.txt
inputdata/2d_surface/: option.txt
inputdata/2d_surface/inputdata/: constraint.txt
inputdata/3d_curve/inputdata/: constraint.txt  nodesInput.txt
inputdata/3d_surface/inputdata/: constraint.txt  edgeInput.txt  triangleInput.txt
inputdata/hollow_net/: option.txt
inputdata/hollow_net/inputdata/: edgeInput.txt  nodesInput.txt
inputdata/magnetic_robot/: option.txt
inputdata/space_net/: option.txt
inputdata/space_net/inputdata/: bendingInput.txt  (+5 more)
src/2d_curve/: elasticPlate.cpp  elasticPlate.h  world.cpp  world.h
src/2d_surface/: README.md  eigenIncludes.h  elasticPlate.cpp  elasticPlate.h  main.cpp  setInput.cpp  setInput.h  world.cpp  world.h
src/3d_curve/: README.md  elasticPlate.cpp  elasticPlate.h  option.txt  world.cpp
src/3d_surface/: Makefile_Sample  elasticBendingForce.cpp  elasticPlate.cpp  elasticPlate.h  option.txt  timeStepper.h  world.cpp  world.h
src/hollow_net/: eigenIncludes.h  elasticPlate.cpp  elasticPlate.h  world.cpp  world.h
src/magnetic_robot/: GlobalStepper.cpp  GlobalStepper.h  Makefile_Sample  dampingForce.cpp  dampingForce.h  dampingForcePlate.cpp  dampingForcePlate.h  elasticBendingForce.cpp  elasticBendingForce.h  elasticBendingForceCouple.cpp  elasticBendingForceCouple.h  elasticBendingForcePlate.cpp  elasticBendingForcePlate.h  elasticPlate.cpp  elasticPlate.h  elasticRod.cpp  elasticRod.h  elasticStretchingForce.cpp  elasticStretchingForce.h  elasticStretchingForceCouple.cpp  elasticStretchingForceCouple.h  elasticStretchingForcePlate.cpp  elasticStretchingForcePlate.h  elasticTwistingForce.cpp  elasticTwistingForce.h  externalContactForce.cpp  externalContactForce.h  externalContactForcePlate.cpp  externalContactForcePlate.h  externalGravityForcePlate.cpp  externalGravityForcePlate.h  externalMagneticForce.cpp  externalMagneticForce.h  inertialForce.cpp  inertialForce.h  inertialForcePlate.cpp  inertialForcePlate.h  main.cpp  setInput.cpp  setInput.h  (+6 more)
src/space_net/: dampingForce.cpp  dampingForce.h  elasticPlate.cpp  elasticPlate.h  elasticStretchingForce.cpp  elasticStretchingForce.h  externalContactForce.cpp  externalContactForce.h  externalContactForceBody.cpp  externalContactForceBody.h  main.cpp  setInput.cpp  setInput.h  world.cpp  world.h
(+3 files in other folders)
